# metahackthon

./: README.md  README_SPACES.md  app.py  dashboard.py  llm_agent.py  pyproject.toml  requirements.txt  train.py  trl_minimal_train.py  trl_train.py
astromind/: README.md  dashboard.py  models.py  pyproject.toml  reward.py  train.py
astromind/astromind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
astromind/client/: astro_client.py
astromind/server/: app.py
client/: astro_client.py
server/: app.py  astro_environment.py
